caught 2nd bug in override computation; delaying computation in java.lang until after preload. 18 failing integration tests